--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "author": "Red Anton",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "@types/npmlog": "^4.1.4",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "npmlog": "^7.0.1",
+    "prisma": "^4.11.0",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "typescript": "^4.9.5"
