--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/npmlog": "^4.1.4",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -22,7 +23,6 @@
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "typescript": "^4.9.5"
