--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.11.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/npmlog": "^4.1.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
@@ -25,6 +23,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/npmlog": "^4.1.4"
   }
 }
