--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "npmlog": "^7.0.1",
     "prisma": "^4.11.0",
+    "rsa-pem-to-jwk": "^1.1.3",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.14.2",
-    "typescript": "^4.9.5",
     "@types/bcryptjs": "^2.4.2",
-    "@types/npmlog": "^4.1.4"
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.14.2",
+    "@types/npmlog": "^4.1.4",
+    "typescript": "^4.9.5"
   }
 }
