--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "googleapis": "^111.0.0",
     "jsonwebtoken": "^9.0.0",
     "npmlog": "^7.0.1",
     "prisma": "^4.11.0",
