--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^4.11.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "googleapis": "^111.0.0",
